Update to gallery image links

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -238,7 +238,7 @@
                 "thumbnailHoverEffect2": "toolsSlideUp|labelSlideDown",
                 "touchAnimation": true,
                 "touchAutoOpenDelay": -1,
-                "itemsBaseURL":     "http://localhost:1313/images/"
+                "itemsBaseURL":     "/images/"
                 }'>
 
         
