deploy: victoriaashmanphotography/sourcecode@25640fd3142da1dd53ce4d1e20617051f90e8424

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ My Blog
 <div class="row gx-4 gx-lg-5 justify-content-center">
 <div class="col-lg-8 text-center">
 <h1 id=victoria-ashman-photography>Victoria Ashman Photography</h1>
-<p>I am currently focusing on my stock photography, and creative imagery for book covers. Many thanks, Victoria</p>
+<p>I am currently focusing on my stock photography, and creative imagery for book covers. Many thanks, Victoria xxx</p>
 <hr>
 </div>
 </div>
