deploy: victoriaashmanphotography/sourcecode@89e6cd37224a8a3ecca5c8c79369010068002513

--- a/about/index.html
+++ b/about/index.html
@@ -71,6 +71,11 @@ Contact
 </a>
 </li>
 <li class=nav-item>
+<a class=nav-link href=/book-covers/ title="Book Covers">
+Book Covers
+</a>
+</li>
+<li class=nav-item>
 <a class=nav-link href=/gallery/ title=Gallery>
 Gallery
 </a>
