--- a/book-covers/index.html
+++ b/book-covers/index.html
@@ -2,9 +2,9 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>Landscapes | Victoria Ashman Photography</title>
+<title>Book Covers | Victoria Ashman Photography</title>
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
-<meta name=description content="The last theme you'll ever need. Maybe.">
+<meta name=description content="A gallery of my creative imagery/book covers">
 <meta name=generator content="Hugo 0.86.0">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=preconnect href=https://fonts.googleapis.com>
@@ -21,14 +21,16 @@
 <link rel=stylesheet type=text/css href=https://victoriaashmanphotography.github.io/css/_hugo-internal-templates.css>
 <link rel=stylesheet type=text/css href=https://victoriaashmanphotography.github.io/css/style.css>
 <link rel="shortcut icon" href=/favicon.png type=image/x-icon>
-<meta property="og:title" content="Landscapes">
-<meta property="og:description" content="The last theme you'll ever need. Maybe.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://victoriaashmanphotography.github.io/tags/landscapes/">
-<meta itemprop=name content="Landscapes">
-<meta itemprop=description content="The last theme you'll ever need. Maybe."><meta name=twitter:card content="summary">
-<meta name=twitter:title content="Landscapes">
-<meta name=twitter:description content="The last theme you'll ever need. Maybe.">
+<meta property="og:title" content="Book Covers">
+<meta property="og:description" content="A gallery of my creative imagery/book covers">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://victoriaashmanphotography.github.io/book-covers/"><meta property="article:section" content>
+<meta itemprop=name content="Book Covers">
+<meta itemprop=description content="A gallery of my creative imagery/book covers">
+<meta itemprop=wordCount content="0">
+<meta itemprop=keywords content="arcangel,Landscapes,Gallery,book covers,"><meta name=twitter:card content="summary">
+<meta name=twitter:title content="Book Covers">
+<meta name=twitter:description content="A gallery of my creative imagery/book covers">
 <script src=https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js integrity=sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM crossorigin=anonymous></script>
 </head>
 <body class="ma0 avenir bg-near-white vap-body">
@@ -68,7 +70,7 @@ Links
 Contact
 </a>
 </li>
-<li class=nav-item>
+<li class="nav-item active">
 <a class=nav-link href=/book-covers/ title="Book Covers">
 Book Covers
 </a>
@@ -97,7 +99,7 @@ My Blog
 </div>
 </div>
 </nav>
-<header class="masthead d-flex align-items-end justify-content-center protected" style=background-image:url(https://victoriaashmanphotography.github.io/) ;>
+<header class="masthead d-flex align-items-end justify-content-center protected" style=background-image:url(https://victoriaashmanphotography.github.io/images/banners/croyde.jpg) ;>
 <section class="page-section mb-5" id=banner-content>
 <div class="container h-100">
 <strong>
@@ -108,42 +110,59 @@ My Blog
 </section>
 </header>
 <main class=pb7 role=main>
-<article class="pa3 pa4-ns nested-copy-line-height nested-img">
-<section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"></section>
-<section class="flex-ns flex-wrap justify-around mt5">
-<div class="relative w-100 w-30-l mb4 bg-white post-list-tile">
+<section class=page-section id=about>
+<div class="container px-4 px-lg-5">
+<div class="row gx-4 gx-lg-5 justify-content-start">
+<h1>Book Covers</h1>
+<p>
+<small>
+<i class="bi bi-tags"></i>
+arcangel,
+Landscapes,
+Gallery,
+book covers,
+</small>
+</p>
+<p> </p>
+<div id=my_nanogallery2 class=galleryTheme data-nanogallery2='{
+                "thumbnailWidth":   "auto",
+                "thumbnailHeight":  250,
+
+                "galleryDisplayMode": "pagination",
+                "galleryMaxRows":  5,
+                
+
+                "thumbnailDisplayTransition": "flipUp",
+                "thumbnailDisplayTransitionDuration": 400,
+                "thumbnailDisplayInterval": 200,
+                "thumbnailDisplayOrder": "rowByRow",
+
+                "thumbnailAlignment": "fillWidth",
+                "thumbnailL1GutterWidth": 20,
+                "thumbnailL1GutterHeight": 20,
+                "thumbnailBorderHorizontal": 1,
+                "thumbnailBorderVertical": 1,
+                "thumbnailHoverEffect2": "toolsSlideUp|labelSlideDown",
+                "touchAnimation": true,
+                "touchAutoOpenDelay": -1,
+                "itemsBaseURL":     "/images/"
+                }'>
+<a href=church-on-the-rock.jpg data-ngthumb=church-on-the-rock.jpg></a>
+<a href=dovecote..jpg data-ngthumb=dovecote..jpg></a>
+<a href=lonely-tree.jpg data-ngthumb=lonely-tree.jpg></a>
+<a href=salibury-plain-black-and-white.jpg data-ngthumb=salibury-plain-black-and-white.jpg></a>
+<a href=lighthouse-foggy.jpg data-ngthumb=lighthouse-foggy.jpg></a>
+<a href=stone-dwelling-at-tryfan.jpg data-ngthumb=stone-dwelling-at-tryfan.jpg></a>
+<a href=trees-in-the-mist.jpg data-ngthumb=trees-in-the-mist.jpg></a>
+<a href=lighthouse-summer.jpg data-ngthumb=lighthouse-summer.jpg></a>
+<a href=dark-tree1.jpg data-ngthumb=dark-tree1.jpg></a>
+<a href=nordic-trees.jpg data-ngthumb=nordic-trees.jpg></a>
+<a href=darren-pier.jpg data-ngthumb=darren-pier.jpg></a>
+<a href=kara-at-waters-edge-600x895.jpg data-ngthumb=kara-at-waters-edge-600x895.jpg></a>
 </div>
-<div class="relative w-100 w-30-l mb4 bg-white post-list-tile">
 </div>
-<div class="relative w-100 w-30-l mb4 bg-white post-list-tile">
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white post-list-tile">
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white post-list-tile">
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white post-list-tile">
 </div>
 </section>
-<ul class="pagination pagination-default">
-<li class=page-item>
-<a href=/tags/landscapes/ aria-label=First class=page-link role=button><span aria-hidden=true>&#171;&#171;</span></a>
-</li>
-<li class=page-item>
-<a href=/tags/landscapes/ aria-label=Previous class=page-link role=button><span aria-hidden=true>&#171;</span></a>
-</li>
-<li class=page-item>
-<a href=/tags/landscapes/ aria-label="Page 1" class=page-link role=button>1</a>
-</li>
-<li class="page-item active">
-<a href=# aria-current=page aria-label="Page 2" class=page-link role=button>2</a>
-</li>
-<li class="page-item disabled">
-<a href=# aria-disabled=true aria-label=Next class=page-link role=button tabindex=-1><span aria-hidden=true>&#187;</span></a>
-</li>
-<li class="page-item disabled">
-<a href=# aria-disabled=true aria-label=Last class=page-link role=button tabindex=-1><span aria-hidden=true>&#187;&#187;</span></a>
-</li>
-</ul></article>
 </main>
 <footer class="bottom-0 w-100 bg-gark-grey" role=contentinfo>
 <section class="page-section w-100 h-20" id=footer>
