--- a/contact/index.html
+++ b/contact/index.html
@@ -71,6 +71,11 @@ Contact
 </a>
 </li>
 <li class=nav-item>
+<a class=nav-link href=/book-covers/ title="Book Covers">
+Book Covers
+</a>
+</li>
+<li class=nav-item>
 <a class=nav-link href=/gallery/ title=Gallery>
 Gallery
 </a>
